--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: Verdana;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.rect {
+  cursor: move;
+  user-select: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content {
+  width: 100%;
+  height: 0%;
+  display: inline-block;
+  overflow: hidden;
+  /* align-items: center;
+  justify-content: center; */
 }
 
-.App-link {
-  color: #61dafb;
+.content1 {
+  background-color: #cac5c5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content2 {
+  background-color: #cac5c5;
 }
+
+.outer {
+  height: 150px;
+  margin: 20px;
+  /* background: #eee; */
+  overflow: hidden;
+}
+.inner {
+  border-radius: 50%;
+  background: pink;
+  height: 100%;
+  display: inline-block;
+}
+.inner img {
+  max-height: 100%;
+  opacity: 0;
+} 
